--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 	
 	<properties>
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	  <jdk.version>1.8</jdk.version>
+	  <scala.version>2.11.4</scala.version>
 	</properties>
 	
 	<repositories>
@@ -33,8 +35,41 @@
 	 	<dependency>
 		    <groupId>org.scala-lang</groupId>
 		    <artifactId>scala-library</artifactId>
-		    <version>2.11.4</version>
+		    <version>${scala.version}</version>
 	    </dependency>
+	    
+	    <!-- Game Engine -->
+	    <dependency>
+			<groupId>com.montywest</groupId>
+			<artifactId>montywest-marioengine</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	    
+	    
+	    <!-- Logging -->
+	    <dependency>
+			<groupId>com.typesafe.scala-logging</groupId>
+			<artifactId>scala-logging-slf4j_2.11</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+	    
+	    <!-- Testing -->
+	    <dependency>
+			<groupId>org.scalamock</groupId>
+			<artifactId>scalamock-core_2.11</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.scalamock</groupId>
+		    <artifactId>scalamock-scalatest-support_2.11</artifactId>
+		    <version>3.2</version>
+		    <scope>test</scope>
+		</dependency>
+	    <dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_2.11</artifactId>
+			<version>2.2.5</version>
+		</dependency>
 	    <dependency>
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
@@ -46,6 +81,8 @@
 			<artifactId>testng</artifactId>
 			<version>6.9.4</version>
 		</dependency>
+		
+		<!-- Code base dependencies -->
 	    <dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm-all</artifactId>
@@ -77,6 +114,10 @@
                         <jvmArg>-Xms64m</jvmArg>
                         <jvmArg>-Xmx1024m</jvmArg>
                     </jvmArgs>
+                    <args>
+                    	<arg>-encoding</arg>
+                    	<arg>UTF-8</arg>
+                    </args>
                 </configuration>
             </plugin>
         </plugins>
