--- a/pom.xml
+++ b/pom.xml
@@ -177,15 +177,35 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
-					<useFile>false</useFile>
-					<disableXmlReport>true</disableXmlReport>
+					<skipTests>true</skipTests>
+					<!-- <useFile>false</useFile> -->
+					<!-- <disableXmlReport>true</disableXmlReport> -->
 					<!-- If you have classpath issue like NoDefClassError,... -->
 					<!-- useManifestOnlyJar>false</useManifestOnlyJar -->
-					<includes>
+					<!-- <includes>
 						<include>**/*Test.*</include>
 						<include>**/*Suite.*</include>
-					</includes>
+					</includes> -->
 				</configuration>
+			</plugin>
+			<!-- enable scalatest -->
+			<plugin>
+			  <groupId>org.scalatest</groupId>
+			  <artifactId>scalatest-maven-plugin</artifactId>
+			  <version>1.0</version>
+			  <configuration>
+			    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+			    <junitxml>.</junitxml>
+			    <filereports>WDF TestSuite.txt</filereports>
+			  </configuration>
+			  <executions>
+			    <execution>
+			      <id>test</id>
+			      <goals>
+			        <goal>test</goal>
+			      </goals>
+			    </execution>
+			  </executions>
 			</plugin>
 
 			<plugin>
